int-tests: uncomment websocket basic test and make it work